# uas-sound-propagation

./: .gitignore  README.md  environment_model.py  main.py  pyproject.toml  requirements.txt  sample_adm.xml  trajectory_to_adm_xml.py  utils.py
.github/: CODEOWNERS
.github/workflows/: main.yml
directivities/H520/downwind/: db_diffs.npy  meta.yaml
directivities/H520/hover/: db_diffs.npy  meta.yaml
directivities/H520/upwind/: db_diffs.npy  meta.yaml
directivities/T150/downwind/: db_diffs.npy  hemisphere.npy  meta.yaml  phis.csv  thetas.csv
directivities/T150/hover/: db_diffs.npy  meta.yaml
directivities/T150/upwind/: db_diffs.npy  freqs.csv  hemisphere.npy  meta.yaml  metadata.txt  phis.csv
docs/: index.html  search.js  uasevent.html
docs/uasevent/: environment.html  interpolators.html  utils.html
flights/: demo_descent.json  demo_flight.json  demo_flight_flyby.csv  demo_flight_flyby_X.csv  demo_flight_flyby_Y.csv  demo_flight_with_accel.csv  demo_flight_with_accel.json  flyby_10m_15ms.csv
mappings/: mappings.json
src/: environment_model.py  interpolators.py  utils.py
tests/: test_flight.csv  test_flight.json  test_flight_2.csv  test_flight_2.json  test_flight_3.csv  tests.py
uasevent/: __init__.py  adm.py  environment.py  environment_model.py  hemisphere.py  interpolators.py  main.py  pyoctaveband.py  utils.py
